# SampleFfmpeg

./: README.md
CSDNJniThread/: gradle.properties  readme.md  settings.gradle
CSDNJniThread/BaseLib/: readme.md
CSDNJniThread/BaseLib/src/main/java/com/kasaax/commons/adapter/: BaseBindingViewHolder.java
CSDNJniThread/BaseLib/src/main/java/com/kasaax/commons/base/: AbsOnListChangedCallbackImpl.java  BaseAct.java  BaseActivityLifecycleCallbackImpl.java  BaseDataBindingActivity.java  BaseFragment.java
CSDNJniThread/BaseLib/src/main/java/com/kasaax/commons/utils/: BlurBitmapUtil.java  CommonUtils.java  KeyBoardUtils.java  LogUtil.java
CSDNJniThread/BaseLib/src/main/res/drawable/: divider_list.xml
CSDNJniThread/BaseLib/src/main/res/values/: arrays.xml  common_colors.xml  strings.xml
CSDNJniThread/app/: build.gradle
CSDNJniThread/app/src/main/: AndroidManifest.xml
CSDNJniThread/app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  ListenerWrapper.cpp  ListenerWrapper.h  mock_consumption_task.cpp  mock_consumption_task.h  native-lib.cpp
CSDNJniThread/app/src/main/java/com/zy/jthread/: JniThreadApp.java  MainActivity.java  ThreadTestHelper.java
CSDNJniThread/app/src/main/res/layout/: activity_main.xml
CSDNJniThread/app/src/main/res/values/: strings.xml
CSDNJniThread/gradle/wrapper/: gradle-wrapper.properties
DynamicLibBuild/: settings.gradle
DynamicLibBuild/app/: build.gradle
DynamicLibBuild/app/src/main/cpp/: native-lib.cpp
DynamicLibBuild/app/src/main/cpp/ffmpeg/: config.h
DynamicLibBuild/app/src/main/java/com/zy/dsff/: MainActivity.java
DynamicLibBuild/app/src/main/res/layout/: activity_main.xml
DynamicLibBuild/app/src/main/res/values/: strings.xml
DynamicLibBuild/gradle/wrapper/: gradle-wrapper.properties
LibFfmpeg336/: settings.gradle
LibFfmpeg336/app/: build.gradle
LibFfmpeg336/app/src/main/: AndroidManifest.xml
LibFfmpeg336/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LibFfmpeg336/app/src/main/java/com/zy/libffmpeg/: MainActivity.java
LibFfmpeg336/app/src/main/res/values/: strings.xml
LibFfmpeg336/gradle/wrapper/: gradle-wrapper.properties
SampleFfmpegV421/: gradle.properties  settings.gradle
SampleFfmpegV421/BaseLib/src/main/java/com/kasaax/commons/adapter/: BaseSampleListAdapter.java  NewPagerAdapter.java
SampleFfmpegV421/BaseLib/src/main/java/com/kasaax/commons/base/: BaseAnimListener.java  BaseApp.java  BaseDataBindingFragment.java  BaseViewModel.java
SampleFfmpegV421/BaseLib/src/main/java/com/kasaax/commons/utils/: AnimatorUtils.java  DataUtils.java  (+6 more)
SampleFfmpegV421/app/: build.gradle
SampleFfmpegV421/app/src/main/: AndroidManifest.xml
SampleFfmpegV421/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SampleFfmpegV421/app/src/main/java/com/zy/ffmpegv421/: FfmpegUtils.java  MainActivity.java
SampleFfmpegV421/app/src/main/res/layout/: activity_main.xml
SampleFfmpegV421/app/src/main/res/values/: strings.xml
SampleFfmpegV421/ffmpeg_build_script/: build_android.sh
SampleFfmpegV421/gradle/wrapper/: gradle-wrapper.properties
SampleLibFfmpeg336/: settings.gradle
SampleLibFfmpeg336/app/: build.gradle
SampleLibFfmpeg336/app/src/main/: AndroidManifest.xml
SampleLibFfmpeg336/app/src/main/java/com/zy/lffmpeg336/: MainActivity.java
SampleLibFfmpeg336/app/src/main/res/values/: strings.xml
SampleLibFfmpeg336/gradle/wrapper/: gradle-wrapper.properties
SampleSoFfmpeg336/: readme.md
SampleSoFfmpeg336/BaseLib/src/main/: AndroidManifest.xml
SampleSoFfmpeg336/BaseLib/src/main/java/com/kasaax/commons/: AppBinding.java  AppConst.java
SampleSoFfmpeg336/BaseLib/src/main/res/values/: attrs.xml  ids.xml
SampleSoFfmpeg336/app/src/androidTest/java/com/zy/ffmpegv421/: ExampleInstrumentedTest.java
SampleSoFfmpeg336/app/src/main/cpp/: native-lib.cpp
SampleSoFfmpeg336/app/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  avfft.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  jni.h  mediacodec.h  qsv.h  vaapi.h  vda.h  vdpau.h  version.h  videotoolbox.h  vorbis_parser.h  xvmc.h
SampleSoFfmpeg336/app/src/main/cpp/include/libavdevice/: avdevice.h  version.h
SampleSoFfmpeg336/app/src/main/cpp/include/libavfilter/: avfilter.h  avfiltergraph.h  buffersink.h  buffersrc.h  version.h
SampleSoFfmpeg336/app/src/main/cpp/include/libavformat/: avformat.h  avio.h  version.h
SampleSoFfmpeg336/app/src/main/cpp/include/libavutil/: adler32.h  aes.h  aes_ctr.h  attributes.h  audio_fifo.h  avassert.h  avconfig.h  avstring.h  avutil.h  base64.h  blowfish.h  bprint.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  cpu.h  crc.h  des.h  dict.h  display.h  downmix_info.h  error.h  eval.h  ffversion.h  fifo.h  file.h  frame.h  hash.h  hmac.h  hwcontext.h  hwcontext_cuda.h  hwcontext_dxva2.h  hwcontext_qsv.h  hwcontext_vaapi.h  hwcontext_vdpau.h  imgutils.h  intfloat.h  (+35 more)
SampleSoFfmpeg336/app/src/main/cpp/include/libpostproc/: postprocess.h  version.h
SampleSoFfmpeg336/app/src/main/cpp/include/libswresample/: swresample.h  version.h
SampleSoFfmpeg336/app/src/main/cpp/include/libswscale/: swscale.h  version.h
SampleSoFfmpeg336/app/src/main/java/com/zy/ffmpegv421/: FfmpegApp.java  FfmpegUtils.java  MainActivity.java
SampleSoFfmpeg336/app/src/main/res/layout/: activity_main.xml
SampleSoFfmpeg336/app/src/test/java/com/zy/ffmpegv421/: ExampleUnitTest.java
SampleSoFfmpeg336/ffmpeg_build_script/: all_build1912192210.sh
SoFfmpeg336/BaseLib/: build.gradle
SoFfmpeg336/BaseLib/src/main/java/com/kasaax/commons/: AppBinding.java  AppConst.java
SoFfmpeg336/app/src/main/: AndroidManifest.xml
SoFfmpeg336/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SoFfmpeg336/app/src/main/java/com/zy/ffmpegv421/: FfmpegApp.java  FfmpegUtils.java
SoFfmpeg336/ffmpeg_build_script/: all_build_12191731.sh
StaticLibBuild/: settings.gradle
StaticLibBuild/app/: build.gradle
StaticLibBuild/app/src/main/: AndroidManifest.xml
StaticLibBuild/app/src/main/java/com/zy/dsff/: MainActivity.java
StaticLibBuild/app/src/main/res/values/: strings.xml
StaticLibBuild/gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
